[package]
name = "convat-json2yaml"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[lib]
name = "convat_json2yaml"
path = "src/lib.rs"

[[bin]]
name = "convat-json2yaml"
path = "src/main.rs"
